--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 
   <dependencies>
       <dependency>
+          <groupId>jakarta.validation</groupId>
+          <artifactId>jakarta.validation-api</artifactId>
+          <version>3.0.2</version>
+      </dependency>
+      <dependency>
           <groupId>jakarta.servlet.jsp</groupId>
           <artifactId>jakarta.servlet.jsp-api</artifactId>
           <version>3.1.1</version>
